--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <!-- шапка сайта  -->
     <header>Шапка сайта</header>
     <!-- секция 1 -->
-    <section>Секция 1</section>
+    <section class="section" id="warranty">
+      <div class="wrapper">
+        <div class="text-block">
+          <h1 class="title">Paeceful shopping mindful money</h1>
+          <p class="copy">See how we can help with making your shopping experience and money managment more ZEN</p>
+          <div class="links">
+            <a class="link" href="https://apple.com">
+              <img src="./assets/icons/link-apple.svg" alt="Apple icon">
+            </a>
+            <a class="link" href="https://google.com">
+              <img src="./assets/icons/link-google.svg" alt="Google icon">
+            </a>
+          </div>
+          
+        </div>
+        <div class="image-block">
+          <img src="./assets/images/1.jpg" alt="Bag and device" >
+        </div>
+      </div>
+    </section>
     <!-- секция 2 -->
     <section>Секция 2</section>
     <!-- секция 3 -->
