Added html for section 1 v-2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- шапка сайта  -->
     <header>Шапка сайта</header>
     <!-- секция 1 -->
-    <section class="section" id="warranty">
+    <section class="section" id="download">
       <div class="wrapper">
         <div class="text-block">
           <h1 class="title">Paeceful shopping mindful money</h1>
