Added html for section 1 v-2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <div class="wrapper">
         <div class="text-block">
           <h1 class="title">Paeceful shopping mindful money</h1>
-          <p class="copy">See how we can help with making your shopping experience and money managment more ZEN</p>
+          <p class="copy">
+            See how we can help with making your shopping experience and money managment more ZEN
+          </p>
           <div class="links">
             <a class="link" href="https://apple.com">
               <img src="./assets/icons/link-apple.svg" alt="Apple icon">
@@ -23,10 +25,9 @@
               <img src="./assets/icons/link-google.svg" alt="Google icon">
             </a>
           </div>
-          
         </div>
         <div class="image-block">
-          <img src="./assets/images/1.jpg" alt="Bag and device" >
+          <img src="./assets/images/1.jpg" alt="Bag and device" />
         </div>
       </div>
     </section>
