add html for section 1 v-3

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
           </p>
           <div class="links">
             <a class="link" href="https://apple.com">
-              <img src="./assets/icons/link-apple.svg" alt="Apple icon">
+              <img src="./assets/icons/link-apple.svg" alt="Apple icon" />
             </a>
             <a class="link" href="https://google.com">
-              <img src="./assets/icons/link-google.svg" alt="Google icon">
+              <img src="./assets/icons/link-google.svg" alt="Google icon" />
             </a>
           </div>
         </div>
