Changed values for attributes(BEM)

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <!-- шапка сайта  -->
     <header>Шапка сайта</header>
     <!-- секция 1 -->
-    <section class="section" id="download">
-      <div class="wrapper">
-        <div class="text-block">
-          <h1 class="title">Paeceful shopping mindful money</h1>
-          <p class="copy">
+    <section class="download" id="download">
+      <div class="download__wrapper">
+        <div class="download__text-block">
+          <h1 class="download__title">Paeceful shopping mindful money</h1>
+          <p class="download__copy">
             See how we can help with making your shopping experience and money managment more ZEN
           </p>
-          <div class="links">
-            <a class="link" href="https://apple.com">
+          <div class="download__links">
+            <a class="download__link" href="https://apple.com">
               <img src="./assets/icons/link-apple.svg" alt="Apple icon" />
             </a>
-            <a class="link" href="https://google.com">
+            <a class="download__link" href="https://google.com">
               <img src="./assets/icons/link-google.svg" alt="Google icon" />
             </a>
           </div>
         </div>
-        <div class="image-block">
+        <div class="download__image-block">
           <img src="./assets/images/1.jpg" alt="Bag and device" />
         </div>
       </div>
